# wikiedits-api

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.json
.claude/commands/: rename-fn.md  write-fn.md  write-test.md
docs/: functions.md
tests/: test_abs_change.py  test_aggregate_edits.py  test_bytes.py  test_date_validation.py  test_edited_pages.py  test_edits.py  test_edits_aggregate.py  test_edits_per_page.py  test_make_request.py  test_most_edited_net.py  test_net_change.py  test_new_pages.py  test_pages.py  test_split_date.py  test_sum_edited_pages.py  test_sum_edits_aggregate.py  test_sum_edits_per_page.py  test_sum_new_pages.py  test_top.py  test_top_by_abs_diff.py  test_top_by_edits.py  test_top_by_net_diff.py
wikiedits/: __init__.py  api.py  client.py  date_utils.py
