[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiedits-api"
dynamic = ["version"]
description = "A Python client library for accessing Wikipedia editor analytics from the Wikimedia Analytics API"
authors = [
    {name = "Cecilia Wat-Kim", email = "ceciliawatt@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "requests>=2.20.0",
    "python-dateutil>=2.8.0",
]
keywords = ["wikipedia", "wikimedia", "analytics", "api", "editing", "statistics", "data"]

[project.urls]
Homepage = "https://github.com/cswatt/wikiedits-api"
"Bug Tracker" = "https://github.com/cswatt/wikiedits-api/issues"
Documentation = "https://github.com/cswatt/wikiedits-api#readme"
"Source Code" = "https://github.com/cswatt/wikiedits-api"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock>=3.6.0",
    "flake8>=4.0",
    "isort>=5.0",
    "mypy>=0.991",
    "pre-commit>=2.0",
]

[tool.setuptools.dynamic]
version = {attr = "wikiedits.api.__version__"}

[tool.setuptools.packages.find]
include = ["wikiedits*"]


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist", ".eggs"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
